--- a/src/index.css
+++ b/src/index.css
@@ -41,6 +41,7 @@ body{
     background: #fff;
     padding: 10px 10px;
     border-radius: 5px;
+    position: relative;
 }
 
 .song h2{
@@ -48,4 +49,15 @@ body{
 }
 .song p{
     font-size: 15px;
+}
+.song-position{
+    position: absolute;
+    background: rgb(70, 2, 2);
+    /* width: 30px; */
+    border-top-left-radius: 12px;
+    border-bottom-right-radius: 12px;
+    color: #fff;
+    padding: 5px 5px;
+    top: 0;
+    left: 0;
 }
