--- a/src/index.css
+++ b/src/index.css
@@ -1,63 +1,69 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-body{
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    background: #F1F5F8;
-    color: #222;
-}
-.song-list{
-    width: 90vw;
-    max-width: 1200px;
-    margin: 2rem auto;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-.songs-contain{
-    width: 90vw;
-    max-width: 1200px;
-    margin: 2rem auto;
-    display: grid;
-    justify-content: center;
-    align-items: center;
-    gap: 1rem;
-}
-@media screen and (min-width:750px) {
-    .song-list .songs-contain{
-        grid-template-columns: repeat(4, 1fr);
-    }
-}
-.song img{
-    width: 100%;
-    object-fit: cover;
-}
-.song{
-    max-width: 400px;
-    text-align: center;
-    background: #fff;
-    padding: 10px 10px;
-    border-radius: 5px;
-    position: relative;
+:root {
+  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  line-height: 1.5;
+  font-weight: 400;
+
+  color-scheme: light dark;
+  color: rgba(255, 255, 255, 0.87);
+  background-color: #242424;
+
+  font-synthesis: none;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-text-size-adjust: 100%;
 }
 
-.song h2{
-    font-size: 17px;
+a {
+  font-weight: 500;
+  color: #646cff;
+  text-decoration: inherit;
 }
-.song p{
-    font-size: 15px;
+a:hover {
+  color: #535bf2;
 }
-.song-position{
-    position: absolute;
-    background: rgb(70, 2, 2);
-    /* width: 30px; */
-    border-top-left-radius: 12px;
-    border-bottom-right-radius: 12px;
-    color: #fff;
-    padding: 5px 5px;
-    top: 0;
-    left: 0;
+
+body {
+  margin: 0;
+  display: flex;
+  place-items: center;
+  min-width: 320px;
+  min-height: 100vh;
+}
+
+h1 {
+  font-size: 3.2em;
+  line-height: 1.1;
+}
+
+button {
+  border-radius: 8px;
+  border: 1px solid transparent;
+  padding: 0.6em 1.2em;
+  font-size: 1em;
+  font-weight: 500;
+  font-family: inherit;
+  background-color: #1a1a1a;
+  cursor: pointer;
+  transition: border-color 0.25s;
+}
+button:hover {
+  border-color: #646cff;
+}
+button:focus,
+button:focus-visible {
+  outline: 4px auto -webkit-focus-ring-color;
+}
+
+@media (prefers-color-scheme: light) {
+  :root {
+    color: #213547;
+    background-color: #ffffff;
+  }
+  a:hover {
+    color: #747bff;
+  }
+  button {
+    background-color: #f9f9f9;
+  }
 }
